ブログページ追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,9 @@ const posts = await res.json()
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">ホーム</a>
+    <a href="/news/">新着情報</a>
+    <a href="/blog/">ブログ</a>
 		<h1>Astro</h1>
 		<div class="wrapper">
 			<section>
