カテゴリ一覧までできた

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,27 +1,57 @@
 ---
 const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts/")
 const posts = await res.json()
+
+import '../css/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
+
+//カテゴリーの名前取得
+const categoryMap = new Map();
+posts.forEach(post => {
+  // ここでは、post.category_id がカテゴリーのIDを表すと仮定
+  categoryMap.set(post.category_name, post.categories);
+});
+
+//meta title keyword descriptionの設定
+const metaTitle = "ブログページ";
+const metaeDesc = "Astroの練習用のページのブログ一覧";
+const metaKeyword = "Astroの練習用のページ,blog,Astro,study";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-    <a href="/">ホーム</a>
-    <a href="/news/">新着情報</a>
-    <a href="/blog/">ブログ</a>
-
-    <h1>私のAstroサイト</h1>
-    <h1>私について</h1>
-    <h2>... そして私の新しいAstroサイトについて！</h2>
-  
-    <p>私はAstroの入門チュートリアルを進めています。これは私のウェブサイトの2番目のページで、自分で作った初めてのページです！</p>
-  
-    <p>このサイトはチュートリアルを進めるにつれて更新されていきます。定期的にチェックして、私の旅の様子を見に来てください！</p>
-  </body>
-</html>
+<BaseLayout metaTitle={metaTitle} metaeDesc={metaeDesc} metaKeyword={metaKeyword}>
+  <h1>Astro</h1>
+		<div class="wrapper">
+			<section>
+				<h2>カテゴリー一覧</h2>
+        <div class="category-list">
+          <ul>
+            {Array.from(categoryMap).map(([name, id]) => (
+              <li key={id}>
+                <a href={`/category/${id}`}>
+                  <p>{name}</p>
+                </a>
+              </li>
+            ))}
+          </ul>
+        </div>
+      </section>
+      <section>
+        <h2>記事一覧</h2>
+        <div class="article-list">
+				<ul>
+					{posts.map((post) =>
+					<li>
+						<a href={`/blog/` + post.id}>
+						<article>
+							<h3 set:html={post.title.rendered} />
+							<time datetime="">{post.date.substring(0 , 10)}</time>
+							<div set:html={post.excerpt.rendered} />
+						</article>
+					</li>
+					)}
+				</ul>
+			</div>
+      </section>
+			
+		</div>
+</BaseLayout>
