--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,6 +8,9 @@ import Footer from '../components/Footer.astro';
 const { metaTitle } = Astro.props;
 const { metaDesc } = Astro.props;
 const { metaKeyword } = Astro.props;
+
+//ページ遷移時のアニメーション
+import { ViewTransitions } from 'astro:transitions';
 ---
 
 <html lang="en">
@@ -20,8 +23,9 @@ const { metaKeyword } = Astro.props;
     <meta property="og:title" content={metaTitle} />
     <meta property="keyword" content={metaKeyword} />
 		<title>{metaTitle}</title>
+    <ViewTransitions />
 	</head>
-	<body>
+	<body transition:animate="slide">
 		<Header />
     <slot />
 		<Footer />
