--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts/")
+const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts&per_page=5")
 const posts = await res.json()
 
 import '../css/global.css';
