--- a/src/pages/blog/page/[page].astro
+++ b/src/pages/blog/page/[page].astro
@@ -1,47 +1,45 @@
 ---
+
+export async function getStaticPaths() {
+  const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts")
+  const posts = await res.json()
+  let total = await res.headers.get('x-wp-totalpages')
+  const paths = [...Array(Number(total))].map((post,index) => ({
+    params:{
+      page: index + 1
+     
+    }
+  }))
+  return paths
+}
+
 const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts")
 const posts = await res.json()
 
-import '../css/global.css';
-import BaseLayout from '../layouts/BaseLayout.astro';
+const { page } = Astro.params
+const res_post = await fetch(`https://ryoccom.com/?rest_route=/wp/v2/posts?page=${page}`)
+const post = await res_post.json()
+let total = await res.headers.get('x-wp-totalpages')
 
-//カテゴリーの名前取得
-const categoryMap = new Map();
-posts.forEach(post => {
-  categoryMap.set(post.category_name, post.categories);
-});
 
-const total = await res.headers.get('x-wp-totalpages')
 
+
+import '../../../css/global.css';
+import BaseLayout from '../../../layouts/BaseLayout.astro';
 //meta title keyword descriptionの設定
 const metaTitle = "ブログページ";
 const metaeDesc = "Astroの練習用のページのブログ一覧";
 const metaKeyword = "Astroの練習用のページ,blog,Astro,study";
+
 ---
 
 <BaseLayout metaTitle={metaTitle} metaeDesc={metaeDesc} metaKeyword={metaKeyword}>
   <h1>Astro</h1>
 		<div class="wrapper">
-			<section>
-				<h2>カテゴリー一覧</h2>
-        {categoryMap.size > 0 ? (
-          <div class="category-list">
-            <ul>
-              {Array.from(categoryMap).map(([name, id]) => (
-                <li key={id}>
-                  <a href={`/categories/${id}`}>
-                    <p>{name}</p>
-                  </a>
-                </li>
-              ))}
-            </ul>
-          </div>
-        ) : (
-          <p>カテゴリーは登録されていません。</p>
-        )}
-      </section>
+			
       <section>
-        <h2>記事一覧</h2>
+        
+        <h2 set:html=`${page}ページ目の記事` />
         <div class="article-list">
           {posts.length > 0 ? (
             <ul>
