--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,11 +1,12 @@
 ---
-export async function getStaticPaths() {
-  const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts&per_page=100")
-  const posts = await res.json()
 
+export async function getStaticPaths() {
+  const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts")
+  const posts = await res.json()
   const paths = posts.map((post) => ({
     params:{
       id: post.id
+     
     }
   }))
   return paths
@@ -14,6 +15,8 @@ export async function getStaticPaths() {
 const { id } = Astro.params
 const res_post = await fetch(`https://ryoccom.com/?rest_route=/wp/v2/posts/${id}`)
 const post = await res_post.json()
+
+
 
 import '../../css/global.css';
 import BaseLayout from '../../layouts/BaseLayout.astro';
@@ -24,6 +27,15 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
   <div class="content">
     <h1 set:html={post.title.rendered} />
     <div set:html={post.content.rendered} />
-    <p><a href="/">戻る</a></p>
+    <p><a href="/blog">戻る</a></p>
   </div>
+  <div class="pagenation">
+    {post.prev && post.prev.id ? (
+      <a href={`${post.prev.id}`}>前の記事</a>
+    ) : null}
+    {post.next && post.next.id ? (
+      <a href={`${post.next.id}`}>次の記事</a>
+    ) : null}
+  </div>
+
 </BaseLayout>
