--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,12 +1,11 @@
 ---
 
 export async function getStaticPaths() {
-  const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts")
+  const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts&per_page=100")
   const posts = await res.json()
   const paths = posts.map((post) => ({
     params:{
       id: post.id
-     
     }
   }))
   return paths
@@ -26,8 +25,8 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
 <BaseLayout metaTitle={post.title.rendered} metaeDesc={post.meta_field.meta_description} metaKeyword={post.meta_field.meta_keyword}>
   <div class="content">
     <h1 set:html={post.title.rendered} />
+    <time datetime="">{post.date.substring(0 , 10)}</time>
     <div set:html={post.content.rendered} />
-    <p><a href="/blog">戻る</a></p>
   </div>
   <div class="pagenation">
     {post.prev && post.prev.id ? (
