--- a/src/pages/blog/page/[page].astro
+++ b/src/pages/blog/page/[page].astro
@@ -1,47 +1,45 @@
 ---
-
 export async function getStaticPaths() {
-  const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts")
-  const posts = await res.json()
-  let total = await res.headers.get('x-wp-totalpages')
-  const paths = [...Array(Number(total))].map((post,index) => ({
-    params:{
-      page: index + 1
-     
-    }
-  }))
-  return paths
+  const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts");
+  let total = await res.headers.get("x-wp-totalpages");
+  const paths = [...Array(Number(total))].map((post, index) => ({
+    params: {
+      page: index + 1,
+    },
+  }));
+  return paths;
 }
 
-const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts")
-const posts = await res.json()
+const { page } = Astro.params;
 
-const { page } = Astro.params
-const res_post = await fetch(`https://ryoccom.com/?rest_route=/wp/v2/posts?page=${page}`)
-const post = await res_post.json()
-let total = await res.headers.get('x-wp-totalpages')
+const res = await fetch("https://ryoccom.com/?rest_route=/wp/v2/posts");
+const posts = await res.json();
+let total = await res.headers.get("x-wp-totalpages");
+const currentPage = parseInt(page, 10);
 
+const prevPage = currentPage > 1 ? currentPage - 1 : null;
+const nextPage = currentPage < total ? currentPage + 1 : null;
 
-
-
-import '../../../css/global.css';
-import BaseLayout from '../../../layouts/BaseLayout.astro';
+import "../../../css/global.css";
+import BaseLayout from "../../../layouts/BaseLayout.astro";
 //meta title keyword descriptionの設定
 const metaTitle = "ブログページ";
 const metaeDesc = "Astroの練習用のページのブログ一覧";
 const metaKeyword = "Astroの練習用のページ,blog,Astro,study";
-
 ---
 
-<BaseLayout metaTitle={metaTitle} metaeDesc={metaeDesc} metaKeyword={metaKeyword}>
+<BaseLayout
+  metaTitle={metaTitle}
+  metaeDesc={metaeDesc}
+  metaKeyword={metaKeyword}
+>
   <h1>Astro</h1>
-		<div class="wrapper">
-			
-      <section>
-        
-        <h2 set:html=`${page}ページ目の記事` />
-        <div class="article-list">
-          {posts.length > 0 ? (
+  <div class="wrapper">
+    <section>
+      <h2 set:html=`${page}ページ目の記事` />
+      <div class="article-list">
+        {
+          posts.length > 0 ? (
             <ul>
               {posts.map((post) => (
                 <li key={post.id}>
@@ -57,18 +55,34 @@ const metaKeyword = "Astroの練習用のページ,blog,Astro,study";
             </ul>
           ) : (
             <p>投稿がありません。</p>
-          )}          
-			</div>
-      </section>
-      <div class="pagenation">
-        <ul>
-            {
-                [...Array(Number(total))].map((posts, index) => (
-                    <li><a href={`/blog/page/${index + 1}/`}>{index + 1}</a></li>
-                ))
-            }
-        </ul>
+          )
+        }
       </div>
-			
-		</div>
+    </section>
+    {
+      posts.length > 0 ? (
+        <div class="pagenation">
+          <ul>
+            {prevPage && (
+              <li>
+                <a href={`/blog/page/${prevPage}/`}>前へ</a>
+              </li>
+            )}
+            {[...Array(Number(total))].map((posts, index) => (
+              <li>
+                <a href={`/blog/page/${index + 1}/`}>{index + 1}</a>
+              </li>
+            ))}
+            {nextPage && (
+              <li>
+                <a href={`/blog/page/${nextPage}/`}>次へ</a>
+              </li>
+            )}
+          </ul>
+        </div>
+      ) : (
+        <div class="pagenation" />
+      )
+    }
+  </div>
 </BaseLayout>
